# dailynator

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  init_migration.py  main.py  manifest.json  manifest.yml  pyproject.toml  test.py  test2.py
docker/: bot.Dockerfile  init.sql
migration/: env.py
migration/versions/: 5fa1ffbb60a1_init_migration.py
src/: block_kit.py  db.py  db_scheme.py  listeners.py  matchers.py  models.py  report.py  utils.py
src/ws/: __init__.py  listeners.py
