[tool.poetry]
name = "dailynator"
version = "1.0.0"
description = "Slack bot for handling with daily meetings in ease"
authors = ["Drugsosos <44712637+Drugsosos@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.14.3"
aiohttp = "^3.8.1"
APScheduler = "^3.9.1"
websockets = "^10.3"
tzdata = "^2022.4"
asyncpg = "^0.26.0"
SQLAlchemy = "^1.4.41"
greenlet = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
